<?xml version="1.0"?>
<package format="2">
    <name>mmm_kinect</name>
    <version>1.0.0</version>
    <description>Kinect vision, mapping, and navigation</description>
    <maintainer email="ianholst@gmail.com">Ian Holst</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">http://www.choitek.com/</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="ianholst@gmail.com">Ian Holst</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->

    <!-- Use buildtool_depend for build tool packages: -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Use depend for packages you need at compile time and runtime: -->
    <depend>rospy</depend>
    <depend>freenect_launch</depend>
    <depend>freenect_camera</depend>
    <depend>rtabmap_ros</depend>
    <depend>sensor_msgs</depend>
    <depend>opencv2</depend>
    <depend>cv_bridge</depend>


    <!-- Use build_depend for packages you need at compile time: -->
    <!-- <build_depend>message_generation</build_depend> -->

    <!-- Use run_depend for packages you need at runtime: -->
    <!-- <exec_depend>message_runtime</exec_depend> -->

    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
